# phelia-jackett

./: permissions.yaml  phelia.yaml
.github/workflows/: release.yml
backend/: pyproject.toml
backend/phelia_jackett/: __init__.py  torznab.py
