[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phelia-jackett-backend"
version = "0.1.0"
description = "Phelia Jackett connector backend"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
